--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ min_width:100%;
 
 <div class="main">
 <video id="video-background" preload autoplay muted>
-<source src="Flight Through Beautiful Clouds Footage 4K Loop.mp4" type="video/mp4"/>
+<source src="resume/Flight Through Beautiful Clouds Footage 4K Loop.mp4" type="video/mp4"/>
 </video>
 </div>
 
