--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Engineering And Management .
 <p>
 Own Video
 </p>
-<video src="The Nights At Kaohsiung（with Avicii－The Nights）.mp4" width="400" height="300" preload controls loop></video>
+<video src="https://youtu.be/3JuyKF5t5ms" width="400" height="300" preload controls loop></video>
 <video src="OK ! Brother《狗屎王》——Ultra Shit.mp4" width="400" height="300" preload controls loop>
 </video>
 </center>
