--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Engineering And Management .
 Own Video
 </p>
 <video src="https://youtu.be/3JuyKF5t5ms" width="400" height="300" preload controls loop></video>
-<video src="OK ! Brother《狗屎王》——Ultra Shit.mp4" width="400" height="300" preload controls loop>
+<url="OK ! Brother《狗屎王》——Ultra Shit.mp4" width="400" height="300" preload controls loop>
 </video>
 </center>
 </div>
