--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ Engineering And Management .
 <p>
 Own Video
 </p>
-<video src="https://youtu.be/3JuyKF5t5ms" width="400" height="300" preload controls loop></video>
-<url="OK ! Brother《狗屎王》——Ultra Shit.mp4" width="400" height="300" preload controls loop>
+<src="https://youtu.be/3JuyKF5t5ms" width="400" height="300" preload controls loop></video>
+<video src="OK ! Brother《狗屎王》——Ultra Shit.mp4" width="400" height="300" preload controls loop>
 </video>
 </center>
 </div>
