--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Engineering And Management .
 <p>
 Own Video
 </p>
-<iframe video src="https://youtu.be/3JuyKF5t5ms?controls=0" width="400?autoplay=1" height="300" preload controls loop></video></iframe>
+<iframe src="https://youtu.be/3JuyKF5t5ms?controls=0" width="400?autoplay=1" height="300" preload controls loop></iframe>
 <video src="OK ! Brother《狗屎王》——Ultra Shit.mp4" width="400" height="300" preload controls loop>
 </video>
 </center>
