--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@ Engineering And Management .
 <p>
 Own Video
 </p>
-<object width="425" height="344" data="https://www.youtube.com/embed/F9Bo89m2f6g"></object>
+<object width="425" height="344" data="https://youtu.be/3JuyKF5t5ms"></object>
+<object width="425" height="344" data="https://youtu.be/wWqjP5NnCDg"></object>
+
 <video src="https://youtu.be/3JuyKF5t5ms?controls=0" width="400?autoplay=1" height="300" preload controls loop></video>
 <video src="OK ! Brother《狗屎王》——Ultra Shit.mp4" width="400" height="300" preload controls loop>
 </video>
